fix scrollbar issue

--- a/hl/styles/shThemeDefault.css
+++ b/hl/styles/shThemeDefault.css
@@ -16,7 +16,6 @@
  */
 .syntaxhighlighter {
   background-color: white !important;
-  padding: 1px !important;
 }
 .syntaxhighlighter .line.alt1 {
   background-color: white !important;
